--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "formik": "^2.2.6",
     "framer-motion": "^3.1.1",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
     "subscriptions-transport-ws": "^0.9.18",
