--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "formik": "^2.2.6",
     "framer-motion": "^3.1.1",
     "graphql": "^15.4.0",
+    "lodash": "^4.17.20",
+    "password-validator": "^5.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
     "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -63,6 +66,8 @@
     "@graphql-codegen/typescript-operations": "1.17.12",
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
     "@types/graphql": "^14.5.0",
-    "@types/reach__router": "^1.3.6"
+    "@types/lodash": "^4.14.168",
+    "@types/reach__router": "^1.3.6",
+    "@types/yup": "^0.29.11"
   }
 }
