--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "downshift": "^6.1.0",
     "formik": "^2.2.6",
     "framer-motion": "^3.1.1",
     "graphql": "^15.4.0",
