--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
+    "react-sizeme": "^3.0.1",
     "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
