--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "4.0.1",
     "react-sizeme": "^3.0.1",
     "subscriptions-transport-ws": "^0.9.18",
+    "ts-deep-extract-types": "^1.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
