--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "date-fns": "^2.19.0",
     "downshift": "^6.1.0",
     "formik": "^2.2.6",
     "framer-motion": "^3.1.1",
