--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
     "react-sizeme": "^3.0.1",
+    "react-test-renderer": "^17.0.2",
     "subscriptions-transport-ws": "^0.9.18",
     "ts-deep-extract-types": "^1.0.1",
     "typescript": "^4.0.3",
+    "waait": "^1.0.5",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
@@ -76,6 +78,7 @@
     "@types/graphql": "^14.5.0",
     "@types/lodash": "^4.14.168",
     "@types/reach__router": "^1.3.6",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/yup": "^0.29.11"
   }
 }
