--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "date-fns": "^2.19.0",
-    "downshift": "^6.1.0",
     "formik": "^2.2.6",
-    "framer-motion": "^3.1.1",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
     "password-validator": "^5.1.1",
@@ -39,7 +37,6 @@
     "subscriptions-transport-ws": "^0.9.18",
     "ts-deep-extract-types": "^1.0.1",
     "typescript": "^4.0.3",
-    "waait": "^1.0.5",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
@@ -80,5 +77,8 @@
     "@types/reach__router": "^1.3.6",
     "@types/react-test-renderer": "^17.0.1",
     "@types/yup": "^0.29.11"
+  },
+  "resolutions": {
+    "graphql": "^15.4.0"
   }
 }
