--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "date-fns": "^2.19.0",
+    "factory.ts": "^0.5.1",
     "formik": "^2.2.6",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
@@ -72,6 +73,7 @@
     "@graphql-codegen/typescript": "1.19.0",
     "@graphql-codegen/typescript-operations": "1.17.12",
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
+    "@testing-library/react-hooks": "^5.1.1",
     "@types/graphql": "^14.5.0",
     "@types/lodash": "^4.14.168",
     "@types/reach__router": "^1.3.6",
