--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
+    "react-swipeable-views": "^0.13.9",
     "subscriptions-transport-ws": "^0.9.18",
     "ts-deep-extract-types": "^1.0.1",
     "typescript": "^4.0.3",
@@ -74,6 +75,7 @@
     "@types/graphql": "^14.5.0",
     "@types/lodash": "^4.14.168",
     "@types/reach__router": "^1.3.6",
+    "@types/react-swipeable-views": "^0.13.0",
     "@types/yup": "^0.29.11"
   },
   "resolutions": {
