--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formik": "^2.2.6",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
+    "mdi-material-ui": "^6.22.1",
     "password-validator": "^5.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
