--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking"
   ],
-  "plugins": ["@typescript-eslint", "react"],
+  "plugins": ["@typescript-eslint", "react", "react-hooks"],
   "env": {
     "browser": true,
     "es6": true,
@@ -20,7 +20,9 @@
     ],
     "@typescript-eslint/no-explicit-any": 1,
     "no-case-declarations": 0,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
   },
   "settings": {
     "react": {
