--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
     "react-swipeable-views": "^0.13.9",
+    "react-window": "^1.8.6",
     "subscriptions-transport-ws": "^0.9.18",
     "ts-deep-extract-types": "^1.0.1",
     "typescript": "^4.0.3",
@@ -77,6 +78,7 @@
     "@types/lodash": "^4.14.168",
     "@types/reach__router": "^1.3.6",
     "@types/react-swipeable-views": "^0.13.0",
+    "@types/react-window": "^1.8.3",
     "@types/yup": "^0.29.11"
   },
   "resolutions": {
