--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wine-app-frontend",
+  "sideEffects": false,
   "version": "0.1.0",
   "engines": {
     "yarn": "1.x"
@@ -8,36 +9,22 @@
   "dependencies": {
     "@apollo/client": "^3.3.6",
     "@apollo/link-context": "^2.0.0-beta.3",
-    "@apollo/link-error": "^2.0.0-beta.3",
     "@apollo/link-ws": "^2.0.0-beta.3",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@reach/router": "^1.3.4",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "factory.ts": "^0.5.1",
     "formik": "^2.2.6",
-    "graphql": "^15.4.0",
     "lodash": "^4.17.20",
     "mdi-material-ui": "^6.22.1",
     "password-validator": "^5.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.1.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.13.9",
     "react-window": "^1.8.6",
-    "subscriptions-transport-ws": "^0.9.18",
     "ts-deep-extract-types": "^1.0.1",
-    "typescript": "^4.0.3",
+    "typescript": "^4.3.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
@@ -69,17 +56,17 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.19.4",
-    "@graphql-codegen/introspection": "1.18.1",
-    "@graphql-codegen/typescript": "1.19.0",
-    "@graphql-codegen/typescript-operations": "1.17.12",
-    "@graphql-codegen/typescript-react-apollo": "2.2.1",
-    "@testing-library/react-hooks": "^5.1.1",
-    "@types/graphql": "^14.5.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.168",
     "@types/reach__router": "^1.3.6",
+    "@types/react-dom": "^17.0.5",
     "@types/react-swipeable-views": "^0.13.0",
     "@types/react-window": "^1.8.3",
-    "@types/yup": "^0.29.11"
+    "@types/yup": "^0.29.11",
+    "factory.ts": "^0.5.1"
   },
   "resolutions": {
     "graphql": "^15.4.0"
