--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@reach/router": "^1.3.4",
     "formik": "^2.2.6",
+    "i18next": "^20.3.1",
+    "i18next-browser-languagedetector": "^6.1.1",
     "lodash": "^4.17.20",
     "mdi-material-ui": "^6.22.1",
     "password-validator": "^5.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.10.0",
     "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.13.9",
     "react-window": "^1.8.6",
